Bug 71551 - Crash in mousedev_open_device
Summary: Crash in mousedev_open_device
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Input Devices (show other bugs)
Hardware: All Linux
: P1 high
Assignee: drivers_input-devices
URL:
Keywords:
: 71471 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-03-05 21:34 UTC by GiulioDP
Modified: 2014-03-31 01:55 UTC (History)
6 users (show)

See Also:
Kernel Version: 3.13.5
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg after the update (77.84 KB, text/plain)
2014-03-05 21:34 UTC, GiulioDP
Details
Fix race when creating multiplexor device (5.07 KB, patch)
2014-03-06 22:29 UTC, Dmitry Torokhov
Details | Diff
Fix race when creating multiplexor device - v2 (5.58 KB, patch)
2014-03-26 17:15 UTC, Dmitry Torokhov
Details | Diff

Description GiulioDP 2014-03-05 21:34:26 UTC
Created attachment 128251 [details]
dmesg after the update

I'm using Arch Linux and I've just updated to systemd-210 since it added the support for the keyboard backlight sav/restore my Macbook Air needed. After having done the update, though, my keyboard is inusable.
Comment 1 GiulioDP 2014-03-05 21:37:41 UTC
Sorry if I forgot, it has to be said that the boot took ~30 seconds more (maybe because the keyboard driver failed to load)
Comment 2 Alan 2014-03-06 15:33:50 UTC
Relevant chunk

[    4.080393] BUG: unable to handle kernel NULL pointer dereference at           (null)
[    4.080399] IP: [<ffffffffa0269317>] mousedev_open_device+0x77/0x100 [mousedev]
[    4.080401] PGD 166488067 PUD 1664fd067 PMD 0 
[    4.080402] Oops: 0000 [#1] PREEMPT SMP 
[    4.080428] Modules linked in: mousedev(+) usbhid bcm5974 hid evdev applesmc input_polldev lib80211_crypt_tkip nls_cp437 vfat fat wl(PO) lib80211 microcode(+) cfg80211 pcspkr lpc_ich(+) i2c_i801(+) rfkill snd_hda_codec_cirrus i915(+) intel_agp snd_hda_intel intel_gtt drm_kms_helper snd_hda_codec video spi_pxa2xx_platform drm snd_hwdep snd_pcm battery ac snd_page_alloc apple_bl snd_timer i2c_algo_bit mei_me snd mei i2c_core soundcore shpchp button processor ext4 crc16 mbcache jbd2 sd_mod usb_storage ahci libahci xhci_hcd libata scsi_mod usbcore usb_common
[    4.080431] CPU: 2 PID: 398 Comm: acpid Tainted: P           O 3.13.5-1-ARCH #1
[    4.080432] Hardware name: Apple Inc. MacBookAir6,2/Mac-7DF21CB3ED6977E5, BIOS MBA61.88Z.0099.B04.1309271229 09/27/2013
[    4.080433] task: ffff8801664f0000 ti: ffff88008a97e000 task.ti: ffff88008a97e000
[    4.080437] RIP: 0010:[<ffffffffa0269317>]  [<ffffffffa0269317>] mousedev_open_device+0x77/0x100 [mousedev]
[    4.080438] RSP: 0018:ffff88008a97fc10  EFLAGS: 00010202
[    4.080439] RAX: 0000000000000000 RBX: ffff88016665b800 RCX: ffff88016665b868
[    4.080440] RDX: 0000000000000000 RSI: 0000000000000000 RDI: 0000000000000246
[    4.080441] RBP: ffff88008a97fc28 R08: 0000000000000000 R09: ffff88016a803600
[    4.080441] R10: 0000000000000000 R11: 0000000000000004 R12: 0000000000000000
[    4.080442] R13: ffff88016665b880 R14: ffff880037b13778 R15: ffff8801687d5a00
[    4.080444] FS:  00007f3f2ca0c700(0000) GS:ffff88016f280000(0000) knlGS:0000000000000000
[    4.080445] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[    4.080446] CR2: 0000000000000000 CR3: 0000000167dda000 CR4: 00000000001407e0
[    4.080447] Stack:
[    4.080449]  ffff88008aa9d800 ffff88016665b800 ffff88016665b878 ffff88008a97fc60
[    4.080451]  ffffffffa026a0cc ffff88016665bb48 ffff880037b13778 ffff8801687d5a00
[    4.080453]  ffffffffa026ae80 ffff8801687d5a10 ffff88008a97fc98 ffffffff811a834f
[    4.080454] Call Trace:
[    4.080458]  [<ffffffffa026a0cc>] mousedev_open+0xcc/0x150 [mousedev]
[    4.080463]  [<ffffffff811a834f>] chrdev_open+0x9f/0x1d0
[    4.080467]  [<ffffffff811a19e7>] do_dentry_open+0x1b7/0x2c0
[    4.080469]  [<ffffffff811aedc1>] ? __inode_permission+0x41/0xb0
[    4.080471]  [<ffffffff811a82b0>] ? cdev_put+0x30/0x30
[    4.080474]  [<ffffffff811a1e01>] finish_open+0x31/0x40
[    4.080476]  [<ffffffff811b1bf2>] do_last+0x572/0xe90
[    4.080478]  [<ffffffff811af0b6>] ? link_path_walk+0x236/0x8d0
[    4.080480]  [<ffffffff811b25cb>] path_openat+0xbb/0x6b0
[    4.080482]  [<ffffffff811b3cda>] do_filp_open+0x3a/0x90
[    4.080485]  [<ffffffff811c05c7>] ? __alloc_fd+0xa7/0x130
[    4.080488]  [<ffffffff811a2fd4>] do_sys_open+0x124/0x220
[    4.080491]  [<ffffffff811a30ee>] SyS_open+0x1e/0x20
[    4.080494]  [<ffffffff8152142d>] system_call_fastpath+0x1a/0x1f
Comment 3 Alan 2014-03-06 15:34:17 UTC
Please verify you can duplicate this bug without proprietary modules loaded. If not then please report the bug to the module supplier.
Comment 4 Dmitry Torokhov 2014-03-06 20:56:52 UTC
OK, I see where the problem is, but what on earth uses mousedev these days??
Comment 5 Dmitry Torokhov 2014-03-06 22:29:24 UTC
Created attachment 128331 [details]
Fix race when creating multiplexor device

Please try the attached patch and let me know if it helps. Thanks!
Comment 6 GiulioDP 2014-03-07 13:58:53 UTC
I'm sorry but how can I apply the patch?
Comment 7 Dmitry Torokhov 2014-03-07 16:39:09 UTC
If your current directory is the kernel source tree then "patch -p1 < mousedev-race.patch" should do the trick. Then recompile the kernel, install and reboot into it.
Comment 8 Dmitry Torokhov 2014-03-08 00:28:06 UTC
*** Bug 71471 has been marked as a duplicate of this bug. ***
Comment 9 GiulioDP 2014-03-09 11:10:59 UTC
I tried the patch but now I'm unable to boot. I can't reach the DM and I'm unable to type anything. There's a stack trace about the mousedev driver. It has to be said, though, after the first reboot I have been able to boot in with no problems at all (I checked the dmesg). After that, nothing at all.
Comment 10 GiulioDP 2014-03-09 11:11:44 UTC
I also tried this "workaround" but that didn't help:

https://www.archlinux.org/news/linux-313-warning-ps2-keyboard-support-is-now-modular/
Comment 11 Darko Luketic 2014-03-25 15:28:34 UTC
I'm getting this because I have a camera connected via USB and the camera is not "powered" or open. Reliably panics.
kernel 3.13.7

nvidia proprietary driver loaded as you can see below (removing it is not an option right now, sorry)

as soon as I unplug the camera's usb cable this doesn't happen.

Mar 25 16:05:02 arch kernel: BUG: unable to handle kernel NULL pointer dereference at           (null)
Mar 25 16:05:02 arch kernel: IP: [<ffffffffa0032317>] mousedev_open_device+0x77/0x100 [mousedev]
Mar 25 16:05:02 arch kernel: PGD 7f2300067 PUD 7f11a1067 PMD 0 
Mar 25 16:05:02 arch kernel: Oops: 0000 [#1] PREEMPT SMP 
Mar 25 16:05:02 arch kernel: Modules linked in: mousedev(+) snd_hda_codec_hdmi raid10 md_mod iTCO_wdt iTCO_vendor_support mxm_wmi evdev nvidia(PO) intel_rapl x86_pkg_temp_thermal intel_powerclamp coretemp kvm_in
Mar 25 16:05:02 arch kernel: CPU: 3 PID: 367 Comm: acpid Tainted: P           O 3.13.7-1-ARCH #1
Mar 25 16:05:02 arch kernel: Hardware name: Gigabyte Technology Co., Ltd. To be filled by O.E.M./Z77X-UD4H, BIOS F3a 07/29/2013
Mar 25 16:05:02 arch kernel: task: ffff8807f1c26c00 ti: ffff8807f1cca000 task.ti: ffff8807f1cca000
Mar 25 16:05:02 arch kernel: RIP: 0010:[<ffffffffa0032317>]  [<ffffffffa0032317>] mousedev_open_device+0x77/0x100 [mousedev]
Mar 25 16:05:02 arch kernel: RSP: 0018:ffff8807f1ccbc10  EFLAGS: 00010202
Mar 25 16:05:02 arch kernel: RAX: 0000000000000000 RBX: ffff8807ef762000 RCX: ffff8807ef762068
Mar 25 16:05:02 arch kernel: RDX: 0000000000000000 RSI: 0000000000000000 RDI: 0000000000000246
Mar 25 16:05:02 arch kernel: RBP: ffff8807f1ccbc28 R08: 0000000000000000 R09: ffff8807fe003600
Mar 25 16:05:02 arch kernel: R10: 0000000000000000 R11: 0000000000000004 R12: 0000000000000000
Mar 25 16:05:02 arch kernel: R13: ffff8807ef762080 R14: ffff8807e88eacf8 R15: ffff880037afea00
Mar 25 16:05:02 arch kernel: FS:  00007ff85fe38700(0000) GS:ffff88081ecc0000(0000) knlGS:0000000000000000
Mar 25 16:05:02 arch kernel: CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
Mar 25 16:05:02 arch kernel: CR2: 0000000000000000 CR3: 00000007f1ce5000 CR4: 00000000001407e0
Mar 25 16:05:02 arch kernel: Stack:
Mar 25 16:05:02 arch kernel:  ffff8807f10d1200 ffff8807ef762000 ffff8807ef762078 ffff8807f1ccbc60
Mar 25 16:05:02 arch kernel:  ffffffffa00330cc ffff8807ef762348 ffff8807e88eacf8 ffff880037afea00
Mar 25 16:05:02 arch kernel:  ffffffffa0033e80 ffff880037afea10 ffff8807f1ccbc98 ffffffff811a843f
Mar 25 16:05:02 arch kernel: Call Trace:
Mar 25 16:05:02 arch kernel:  [<ffffffffa00330cc>] mousedev_open+0xcc/0x150 [mousedev]
Mar 25 16:05:02 arch kernel:  [<ffffffff811a843f>] chrdev_open+0x9f/0x1d0
Mar 25 16:05:02 arch kernel:  [<ffffffff811a1ad7>] do_dentry_open+0x1b7/0x2c0
Mar 25 16:05:02 arch kernel:  [<ffffffff811aeeb1>] ? __inode_permission+0x41/0xb0
Mar 25 16:05:02 arch kernel:  [<ffffffff811a83a0>] ? cdev_put+0x30/0x30
Mar 25 16:05:02 arch kernel:  [<ffffffff811a1ef1>] finish_open+0x31/0x40
Mar 25 16:05:02 arch kernel:  [<ffffffff811b1ce2>] do_last+0x572/0xe90
Mar 25 16:05:02 arch kernel:  [<ffffffff811af1a6>] ? link_path_walk+0x236/0x8d0
Mar 25 16:05:02 arch kernel:  [<ffffffff811b26bb>] path_openat+0xbb/0x6b0
Mar 25 16:05:02 arch kernel:  [<ffffffff811b3dca>] do_filp_open+0x3a/0x90
Mar 25 16:05:02 arch kernel:  [<ffffffff811c0677>] ? __alloc_fd+0xa7/0x130
Mar 25 16:05:02 arch kernel:  [<ffffffff811a30c4>] do_sys_open+0x124/0x220
Mar 25 16:05:02 arch kernel:  [<ffffffff811a31de>] SyS_open+0x1e/0x20
Mar 25 16:05:02 arch kernel:  [<ffffffff81521b6d>] system_call_fastpath+0x1a/0x1f
Mar 25 16:05:02 arch kernel: Code: e0 65 4e e1 5b 44 89 e0 41 5c 41 5d 5d c3 66 0f 1f 44 00 00 4c 89 ef 41 bc ed ff ff ff e8 c2 65 4e e1 eb e0 48 8b 15 c9 21 00 00 <8b> 02 8d 48 01 85 c0 89 0a 75 c6 48 8b 05 37 
Mar 25 16:05:02 arch kernel: RIP  [<ffffffffa0032317>] mousedev_open_device+0x77/0x100 [mousedev]
Mar 25 16:05:02 arch kernel:  RSP <ffff8807f1ccbc10>
Mar 25 16:05:02 arch kernel: CR2: 0000000000000000
Mar 25 16:05:02 arch kernel: ---[ end trace 70f714181f61bee3 ]---
Comment 12 subx 2014-03-25 16:12:32 UTC
I think I see the same bug every time I boot into my Archlinux.

The problem occurs especially when I have my Logitech trackball plugged in before booting. If not, the trackpad and trackpin on my Thinkpad will freeze for several seconds before free (No kernel bug log in this case).

The problem emerges several days ago when I update the system. My current kernel version is "3.13.7-1-ARCH", and the problem is still there. I can repeat it with my trackball plugged in before booting.




Mar 24 09:06:31 kernel: BUG: unable to handle kernel NULL pointer dereference at           (null)
Mar 24 09:06:31 kernel: IP: [<ffffffffa0f91317>] mousedev_open_device+0x77/0x100 [mousedev]
Mar 24 09:06:31 kernel: PGD d5ad9067 PUD d5874067 PMD 0 
Mar 24 09:06:31 kernel: Oops: 0000 [#1] PREEMPT SMP 
Mar 24 09:06:31 kernel: Modules linked in: mousedev(+) uvcvideo videobuf2_vmalloc videobuf2_memops videobuf2_core videodev media arc4 intel_rapl x86_pkg_temp_thermal intel_powerclamp kvm_intel kvm crct10dif_pclmul crct10dif_common c
Mar 24 09:06:31 kernel:  nf_defrag_ipv4 xt_conntrack ip6table_filter ip6_tables nf_conntrack_netbios_ns nf_conntrack_broadcast nf_nat_ftp nf_nat nf_conntrack_ftp nf_conntrack iptable_filter ip_tables x_tables vboxnetflt(O) vboxnetad
Mar 24 09:06:31 kernel: CPU: 2 PID: 626 Comm: acpid Tainted: G           O 3.13.6-1-ARCH #1
Mar 24 09:06:31 kernel: Hardware name: LENOVO 1286CTO/1286CTO, BIOS 8MET64WW (1.64 ) 01/20/2012
Mar 24 09:06:31 kernel: task: ffff8802108d1200 ti: ffff8800d5b46000 task.ti: ffff8800d5b46000
Mar 24 09:06:31 kernel: RIP: 0010:[<ffffffffa0f91317>]  [<ffffffffa0f91317>] mousedev_open_device+0x77/0x100 [mousedev]
Mar 24 09:06:31 kernel: RSP: 0018:ffff8800d5b47c10  EFLAGS: 00010202
Mar 24 09:06:31 kernel: RAX: 0000000000000000 RBX: ffff88020ea95800 RCX: ffff88020ea95868
Mar 24 09:06:31 kernel: RDX: 0000000000000000 RSI: 0000000000000000 RDI: 0000000000000246
Mar 24 09:06:31 kernel: RBP: ffff8800d5b47c28 R08: 0000000000000000 R09: ffff880215803600
Mar 24 09:06:31 kernel: R10: 0000000000000000 R11: 0000000000000004 R12: 0000000000000000
Mar 24 09:06:31 kernel: R13: ffff88020ea95880 R14: ffff880212213238 R15: ffff880210d4c300
Mar 24 09:06:31 kernel: FS:  00007f04af85a700(0000) GS:ffff88021e280000(0000) knlGS:0000000000000000
Mar 24 09:06:31 kernel: CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
Mar 24 09:06:31 kernel: CR2: 0000000000000000 CR3: 00000000d5ad8000 CR4: 00000000000407e0
Mar 24 09:06:31 kernel: Stack:
Mar 24 09:06:31 kernel:  ffff88021218e200 ffff88020ea95800 ffff88020ea95878 ffff8800d5b47c60
Mar 24 09:06:31 kernel:  ffffffffa0f920cc ffff88020ea95b48 ffff880212213238 ffff880210d4c300
Mar 24 09:06:31 kernel:  ffffffffa0f92e80 ffff880210d4c310 ffff8800d5b47c98 ffffffff811a83ef
Mar 24 09:06:31 kernel: Call Trace:
Mar 24 09:06:31 kernel:  [<ffffffffa0f920cc>] mousedev_open+0xcc/0x150 [mousedev]
Mar 24 09:06:31 kernel:  [<ffffffff811a83ef>] chrdev_open+0x9f/0x1d0
Mar 24 09:06:31 kernel:  [<ffffffff811a1a87>] do_dentry_open+0x1b7/0x2c0
Mar 24 09:06:31 kernel:  [<ffffffff811aee61>] ? __inode_permission+0x41/0xb0
Mar 24 09:06:31 kernel:  [<ffffffff811a8350>] ? cdev_put+0x30/0x30
Mar 24 09:06:31 kernel:  [<ffffffff811a1ea1>] finish_open+0x31/0x40
Mar 24 09:06:31 kernel:  [<ffffffff811b1c92>] do_last+0x572/0xe90
Mar 24 09:06:31 kernel:  [<ffffffff811af156>] ? link_path_walk+0x236/0x8d0
Mar 24 09:06:31 kernel:  [<ffffffff811b266b>] path_openat+0xbb/0x6b0
Mar 24 09:06:31 kernel:  [<ffffffff811b3d7a>] do_filp_open+0x3a/0x90
Mar 24 09:06:31 kernel:  [<ffffffff811c0617>] ? __alloc_fd+0xa7/0x130
Mar 24 09:06:31 kernel:  [<ffffffff811a3074>] do_sys_open+0x124/0x220
Mar 24 09:06:31 kernel:  [<ffffffff811a318e>] SyS_open+0x1e/0x20
Mar 24 09:06:31 kernel:  [<ffffffff815216ad>] system_call_fastpath+0x1a/0x1f
Mar 24 09:06:31 kernel: Code: 40 71 58 e0 5b 44 89 e0 41 5c 41 5d 5d c3 66 0f 1f 44 00 00 4c 89 ef 41 bc ed ff ff ff e8 22 71 58 e0 eb e0 48 8b 15 c9 21 00 00 <8b> 02 8d 48 01 85 c0 89 0a 75 c6 48 8b 05 37 1f 00 00 48 3d 60 
Mar 24 09:06:31 kernel: RIP  [<ffffffffa0f91317>] mousedev_open_device+0x77/0x100 [mousedev]
Mar 24 09:06:31 kernel:  RSP <ffff8800d5b47c10>
Mar 24 09:06:31 kernel: CR2: 0000000000000000
Mar 24 09:06:31 kernel: random: nonblocking pool is initialized
Mar 24 09:06:31 kernel: ---[ end trace 6768eb9157908639 ]---
Comment 13 Dmitry Torokhov 2014-03-26 17:15:32 UTC
Created attachment 130741 [details]
Fix race when creating multiplexor device - v2

This one should work better.
Comment 14 mail 2014-03-29 11:20:09 UTC
Hi,

I got a very similar error output with kernel 3.13.7, which I just installed on my Archlinux device. Lenovo Thinkpad X220, if that matters at all.

journald output:

Mär 29 11:53:05 fu kernel: BUG: unable to handle kernel NULL pointer dereference at           (null)
Mär 29 11:53:05 fu kernel: IP: [<ffffffffa01f8317>] mousedev_open_device+0x77/0x100 [mousedev]
Mär 29 11:53:05 fu kernel: PGD 400853067 PUD 400852067 PMD 0 
Mär 29 11:53:05 fu kernel: Oops: 0000 [#1] PREEMPT SMP 
Mär 29 11:53:05 fu kernel: Modules linked in: mousedev(+) btusb bluetooth intel_rapl x86_pkg_temp_thermal intel_powerclamp coretemp kvm_intel kvm btrfs iTCO_wdt iTCO_vendor_support snd_hda_codec_hdmi snd_hda_codec_conexant raid6_pq libcrc32c xor nls_cp437 vfat fat arc4 iwldvm mac80211 microcode evdev pcspkr psmouse se
Mär 29 11:53:05 fu kernel:  crc32c_intel ghash_clmulni_intel aesni_intel aes_x86_64 lrw gf128mul glue_helper ablk_helper cryptd ehci_pci sdhci_pci ehci_hcd sdhci scsi_mod mmc_core usbcore usb_common i8042 serio
Mär 29 11:53:05 fu kernel: CPU: 2 PID: 764 Comm: acpid Tainted: G           O 3.13.7-1-ARCH #1
Mär 29 11:53:05 fu kernel: Hardware name: LENOVO 4290A11/4290A11, BIOS 8DET66WW (1.36 ) 10/22/2012
Mär 29 11:53:05 fu kernel: task: ffff8804068c2400 ti: ffff88007fc62000 task.ti: ffff88007fc62000
Mär 29 11:53:05 fu kernel: RIP: 0010:[<ffffffffa01f8317>]  [<ffffffffa01f8317>] mousedev_open_device+0x77/0x100 [mousedev]
Mär 29 11:53:05 fu kernel: RSP: 0018:ffff88007fc63c10  EFLAGS: 00010202
Mär 29 11:53:05 fu kernel: RAX: 0000000000000000 RBX: ffff880406ded000 RCX: ffff880406ded068
Mär 29 11:53:05 fu kernel: RDX: 0000000000000000 RSI: 0000000000000000 RDI: 0000000000000246
Mär 29 11:53:05 fu kernel: RBP: ffff88007fc63c28 R08: 0000000000000000 R09: ffff88040d803600
Mär 29 11:53:05 fu kernel: R10: 0000000000000000 R11: 0000000000000004 R12: 0000000000000000
Mär 29 11:53:05 fu kernel: R13: ffff880406ded080 R14: ffff880400607238 R15: ffff880405e16f00
Mär 29 11:53:05 fu kernel: FS:  00007f0469f18700(0000) GS:ffff88041e280000(0000) knlGS:0000000000000000
Mär 29 11:53:05 fu kernel: CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
Mär 29 11:53:05 fu kernel: CR2: 0000000000000000 CR3: 00000000d9926000 CR4: 00000000000407e0
Mär 29 11:53:05 fu kernel: Stack:
Mär 29 11:53:05 fu kernel:  ffff880405c7fa00 ffff880406ded000 ffff880406ded078 ffff88007fc63c60
Mär 29 11:53:05 fu kernel:  ffffffffa01f90cc ffff880406ded348 ffff880400607238 ffff880405e16f00
Mär 29 11:53:05 fu kernel:  ffffffffa01f9e80 ffff880405e16f10 ffff88007fc63c98 ffffffff811a843f
Mär 29 11:53:05 fu kernel: Call Trace:
Mär 29 11:53:05 fu kernel:  [<ffffffffa01f90cc>] mousedev_open+0xcc/0x150 [mousedev]
Mär 29 11:53:05 fu kernel:  [<ffffffff811a843f>] chrdev_open+0x9f/0x1d0
Mär 29 11:53:05 fu kernel:  [<ffffffff811a1ad7>] do_dentry_open+0x1b7/0x2c0
Mär 29 11:53:05 fu kernel:  [<ffffffff811aeeb1>] ? __inode_permission+0x41/0xb0
Mär 29 11:53:05 fu kernel:  [<ffffffff811a83a0>] ? cdev_put+0x30/0x30
Mär 29 11:53:05 fu kernel:  [<ffffffff811a1ef1>] finish_open+0x31/0x40
Mär 29 11:53:05 fu kernel:  [<ffffffff811b1ce2>] do_last+0x572/0xe90
Mär 29 11:53:05 fu kernel:  [<ffffffff811af1a6>] ? link_path_walk+0x236/0x8d0
Mär 29 11:53:05 fu kernel:  [<ffffffff81135cf3>] ? unlock_page+0x23/0x30
Mär 29 11:53:05 fu kernel:  [<ffffffff811b26bb>] path_openat+0xbb/0x6b0
Mär 29 11:53:05 fu kernel:  [<ffffffff81161084>] ? handle_mm_fault+0x264/0xed0
Mär 29 11:53:05 fu kernel:  [<ffffffff811b3dca>] do_filp_open+0x3a/0x90
Mär 29 11:53:05 fu kernel:  [<ffffffff811c0677>] ? __alloc_fd+0xa7/0x130
Mär 29 11:53:05 fu kernel:  [<ffffffff811a30c4>] do_sys_open+0x124/0x220
Mär 29 11:53:05 fu kernel:  [<ffffffff811a31de>] SyS_open+0x1e/0x20
Mär 29 11:53:05 fu kernel:  [<ffffffff81521b6d>] system_call_fastpath+0x1a/0x1f
Mär 29 11:53:05 fu kernel: Code: e0 05 32 e1 5b 44 89 e0 41 5c 41 5d 5d c3 66 0f 1f 44 00 00 4c 89 ef 41 bc ed ff ff ff e8 c2 05 32 e1 eb e0 48 8b 15 c9 21 00 00 <8b> 02 8d 48 01 85 c0 89 0a 75 c6 48 8b 05 37 1f 00 00 48 3d 60 
Mär 29 11:53:05 fu kernel: RIP  [<ffffffffa01f8317>] mousedev_open_device+0x77/0x100 [mousedev]
Mär 29 11:53:05 fu kernel:  RSP <ffff88007fc63c10>
Mär 29 11:53:05 fu kernel: CR2: 0000000000000000
Mär 29 11:53:05 fu kernel: ---[ end trace cea09d6c5d332dfc ]---
Comment 15 Dmitry Torokhov 2014-03-29 19:08:33 UTC
The second version of the patch attached to this bug report should fix the issue, but I am holding off pushing it upstream until I have someone tested and/or reviewed it.
Comment 16 GiulioDP 2014-03-29 20:42:43 UTC
Works for me. Thanks!
Comment 17 mail 2014-03-30 08:59:47 UTC
Notice: After my issues with suspend, I shutdown'd my notebook yesterday evening and bootet it this morning (normally I only do a suspend). The described issues did not appear! journald does not report the issue with mousedev!
Comment 18 Dmitry Torokhov 2014-03-31 01:55:11 UTC
Should be fixed with commit e4dbedc7eac7da9db363a36f2bd4366962eeefcc

Note You need to log in before you can comment on or make changes to this bug.